--- a/lab01/lab/pyproject.toml
+++ b/lab01/lab/pyproject.toml
@@ -7,6 +7,15 @@ requires-python = ">=3.12"
 dependencies = [
     "pre-commit>=4.3.0",
     "pydantic-settings>=2.11.0",
+    "pytest-dotenv>=0.5.2",
     "python-dotenv>=1.1.1",
     "pyyaml>=6.0.3",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+]
+
+[tool.pytest.ini_options]
+env_files = "config/.env.test"
