--- a/lab01/lab/pyproject.toml
+++ b/lab01/lab/pyproject.toml
@@ -5,11 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.119.0",
+    "httpx>=0.28.1",
     "pre-commit>=4.3.0",
+    "pydantic==2.12.2",
+    "pydantic-core==2.41.4",
     "pydantic-settings>=2.11.0",
     "pytest-dotenv>=0.5.2",
     "python-dotenv>=1.1.1",
     "pyyaml>=6.0.3",
+    "uvicorn>=0.37.0",
 ]
 
 [dependency-groups]
