--- a/lab01/lab/pyproject.toml
+++ b/lab01/lab/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.119.0",
     "httpx>=0.28.1",
+    "joblib>=1.5.2",
     "pre-commit>=4.3.0",
     "pydantic==2.12.2",
     "pydantic-core==2.41.4",
@@ -14,6 +15,7 @@ dependencies = [
     "pytest-dotenv>=0.5.2",
     "python-dotenv>=1.1.1",
     "pyyaml>=6.0.3",
+    "scikit-learn>=1.7.2",
     "uvicorn>=0.37.0",
 ]
 
