--- a/lab01/homework/pyproject.toml
+++ b/lab01/homework/pyproject.toml
@@ -6,7 +6,14 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "clean-text>=0.6.0",
+    "fastapi>=0.119.0",
     "joblib>=1.5.2",
+    "pydantic>=2.12.2",
     "torch>=2.8.0",
     "transformers>=4.57.1",
+]
+
+[dependency-groups]
+dev = [
+    "uvicorn>=0.37.0",
 ]
