--- a/lab01/homework/Dockerfile
+++ b/lab01/homework/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.12-slim-bookworm
+FROM python:3.12-slim-bookworm AS builder
 
-WORKDIR /app
+WORKDIR /install
 
 RUN apt-get update && apt-get install -y \
     build-essential \
@@ -12,10 +12,21 @@ RUN curl -LsSf https://astral.sh/uv/install.sh | sh && \
     export PATH="/root/.local/bin:$PATH"
 
 ENV PATH="/root/.local/bin:$PATH"
+ENV UV_PROJECT_ENVIRONMENT=/usr/local
 
 COPY pyproject.toml uv.lock ./
 
 RUN uv sync
+
+
+FROM python:3.12-slim-bookworm AS runtime
+
+WORKDIR /app
+
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+ENV PATH="/root/.local/bin:$PATH"
+
+COPY --from=builder /usr/local /usr/local
 
 COPY . .
 
